		simulation parameters -- modify metadata.json
		indicate simulation parameters / output
		add simulation parameters / output 
			passengers delievered
			passengers waiting
		fix passenger event handling
			do we even need status?
		check trike event handling
			should they all have finish trip?
	graphing
		dashboard.py modification


5/9/25
	quite a bit
	a few things to consider
		passenger spawn
			currently all spawn at terminal
		roaming tricycle behavior
			currently terminals are endpoints for roaming paths
			allow to pick up at terminals, as long as no tricycle is lined up?
			allow pick up of passengers, even during SERVING? 
		nonroaming tricycle behavior
			allow tricycles to pickup along the road for RETURNING TO TERMINAL?
	visualization
		roaming endpoints -> large blue circle
		update trike tooltip to only show passenger indices
		tricycle status log
			change moving marker color based on status?
		pause / play?


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


-------------------------------------------------------------------------------------------
1/29/2026

New functions:
- util/__init__.py: is_en_route function - determines if point 3 is "en route" from point 1 to point 2
- entities.py: enqueueNearbyPsgrBetter   - better enqueue method that utilizes is_en_route

Visualization changes:

event_processor.js
- Line 49, 65-80: Create marker for passenger destination upon enqueue
- Line 93-102: Manage marker for passenger destination
- Line 171-194: Commented out because no need for terminals
- Line 308-328: Commented out because no need for path handler (for now) (?)
- Line 470-472: Added removal of destination lines
- Line 522-530: Added removal of destination marker
- Line 568-581: Create destination line between passenger and its destination

managers.js
- Line 115-126: Added more types of markers
- Line 259-349: Destination line management
- Line 814, 829-830: Added destination line color

map.js
- Line 166: processEvent now includes dest